--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/global.css"
+
 interface Props {
 	title: string;
 	body: string;
@@ -24,7 +26,8 @@ const { href, title, body } = Astro.props;
 		list-style: none;
 		display: flex;
 		padding: 1px;
-		background-color: #23262d;
+		/* background-color: #23262d; */
+		background-color: var(--secondary);
 		background-image: none;
 		background-size: 400%;
 		border-radius: 7px;
