--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -63,7 +63,7 @@ import SolidCounter from "../contexts/Array/SolidCounter/SolidCounter";
       />
     </ul>
     <SolidCounter client:only="solid-js" />
-    <a href="/astro-lab/about">ABOUT PAGE</a>
+    <a href="/astro-lab/about/">ABOUT PAGE</a>
   </main>
 </Layout>
 
